--- a/style.css
+++ b/style.css
@@ -34,3 +34,28 @@ body{
 a{
     text-decoration: none;
 }
+#official-info{
+    width: 30%;
+}
+
+#container{
+    width: 1870px;
+    margin: auto;
+    border: 5px solid rgb(145,0,0);
+    border-top: 10px solid purple;
+    border-radius: 20px;
+    padding: 6px;
+}
+
+#text3{
+    margin-left: 430px;
+     width: 960px;
+
+            margin-right: 10px;
+            margin-bottom: 20px;
+            border: 5px ridge yellow;
+     padding: 6px;
+            
+            
+    
+}
