--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     text-align: center
 }
 body{
-    background-color:darkseagreen;
+    background-color:aquamarine;
 }
 #text4{
     color:blue;
@@ -56,6 +56,32 @@ a{
             border: 5px ridge yellow;
      padding: 6px;
             
-            
     
+}
+
+#text7{
+    text-align: left;
+    width: 200px;
+}
+#text8{
+    color: crimson;
+    margin-left: 50px;
+}
+#text9{
+    color:brown;
+    margin-left: 50px;
+}
+#text10{
+    
+  display: block;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background: url(http:"84697458_188233782563398_7447563283713753088_o.jpg") no-repeat;
+  width: 180px; /* Width of new image */
+  height: 300px; /* Height of new image */
+  padding-left: 500px; /* Equal to width of new image */
+  
+    
+ 
+        
 }
