--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     font-family:"Helvetica", sans-serif;
 }
 #text3{
-    text-align: center
+    text-align: center;
 }
 body{
     background-color:aquamarine;
@@ -60,28 +60,36 @@ a{
 }
 
 #text7{
-    text-align: left;
+    text-align: right;
     width: 200px;
 }
 #text8{
     color: crimson;
     margin-left: 50px;
+    
 }
 #text9{
     color:brown;
     margin-left: 50px;
 }
 #text10{
-    
-  display: block;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  background: url(http:"84697458_188233782563398_7447563283713753088_o.jpg") no-repeat;
-  width: 180px; /* Width of new image */
-  height: 300px; /* Height of new image */
-  padding-left: 500px; /* Equal to width of new image */
+   
+ width: 10px;
+ padding-left: 500px;
+ position:relative;
+    top: -380px;
   
-    
- 
         
+}
+#text127{
+     color: crimson;
+     margin-left: 600px;
+   top: -390px;
+     position:relative;
+}
+#text128{
+     color:brown;
+     margin-left: 600px;
+   top: -390px;
+     position:relative;
 }
